<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tanyayuferova.realestate.ui.RealEstateEditActivity">

    <data>

        <variable
            name="item"
            type="com.tanyayuferova.realestate.entity.RealEstate" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_real_estate_edit_btn_margin">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView_photo"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activity_real_estate_edit_photo_height"
                    android:layout_margin="@dimen/activity_real_estate_edit_content_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:contentDescription="@string/image_description_real_estate"
                        android:focusable="true"
                        android:onClick="onClickPhoto"
                        android:scaleType="centerCrop"
                        app:error="@{@drawable/ic_photo}"
                        app:imageUrl="@{item.photo}"
                        tools:src="@drawable/ic_photo" />
                </android.support.v7.widget.CardView>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginStart="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginTop="@dimen/activity_real_estate_edit_content_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardView_photo">

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_caption"
                        android:inputType="text"
                        android:text="@={item.address}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginStart="@dimen/activity_real_estate_edit_content_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ti_address">

                    <EditText
                        android:id="@+id/et_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price_caption"
                        android:inputType="numberDecimal"
                        app:doubleValue="@={item.price}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginStart="@dimen/activity_real_estate_edit_content_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ti_price">

                    <EditText
                        android:id="@+id/et_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/area_caption"
                        android:inputType="numberDecimal"
                        app:doubleValue="@={item.area}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_rooms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginStart="@dimen/activity_real_estate_edit_content_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ti_area">

                    <EditText
                        android:id="@+id/et_rooms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rooms_caption"
                        android:inputType="number"
                        app:intValue="@={item.roomsCount}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_floor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginStart="@dimen/activity_real_estate_edit_content_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ti_rooms">

                    <EditText
                        android:id="@+id/et_floor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/floor_caption"
                        android:inputType="number"
                        app:intValue="@={item.floor}" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginStart="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginTop="@dimen/activity_real_estate_edit_btn_margin"
                    android:drawableLeft="@drawable/ic_delete"
                    android:drawableStart="@drawable/ic_delete"
                    android:onClick="onClickDelete"
                    android:text="@string/action_delete"
                    app:layout_constraintEnd_toStartOf="@id/btn_save"
                    app:layout_constraintTop_toBottomOf="@id/ti_floor" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_real_estate_edit_btn_margin"
                    android:drawableLeft="@drawable/ic_done"
                    android:drawableStart="@drawable/ic_done"
                    android:onClick="onClickSave"
                    android:saveEnabled="true"
                    android:text="@string/action_save"
                    app:layout_constraintEnd_toStartOf="@id/btn_cancel"
                    app:layout_constraintTop_toBottomOf="@id/ti_floor" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginRight="@dimen/activity_real_estate_edit_content_margin"
                    android:layout_marginTop="@dimen/activity_real_estate_edit_btn_margin"
                    android:drawableLeft="@drawable/ic_cancel"
                    android:drawableStart="@drawable/ic_cancel"
                    android:onClick="onClickCancel"
                    android:text="@string/action_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ti_floor" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ToolbarStyle"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:navigationIcon="@drawable/ic_arrow_back" />

        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
